fully encapsulate edit files and visibility settings into components. fix incorrect display of public visibility statement before visibility is set

--- a/frontend/src/assets/theme/styles.scss
+++ b/frontend/src/assets/theme/styles.scss
@@ -34,3 +34,30 @@
 .nowrap {
     white-space: nowrap;
 }
+
+.complete {
+   color: $uva-green-A;
+   border: 1px solid $uva-grey-50;
+   padding: 8px;
+   border-radius: 20px;
+   background: white;
+   display: inline-flex;
+   gap: 5px;
+   span {
+      color: $uva-text-color-dark;
+      font-size: 0.9em;
+   }
+}
+.incomplete {
+   color: $uva-red-A;
+   border: 1px solid $uva-grey-50;
+   padding: 8px;
+   border-radius: 20px;
+   background: white;
+   display: inline-flex;
+   gap: 5px;
+   span {
+      color: $uva-text-color-dark;
+      font-size: 0.9em;
+   }
+}
